// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debates selected 1`] = `
<div
  className="timeline__inner-container"
>
  <div
    className="timeline__actions"
  >
    <input
      checked={true}
      className="timeline__radio"
      id="radio--debates"
      name="type"
      onChange={[MockFunction]}
      type="radio"
      value="Debates"
    />
    <label
      className="timeline__radio-label"
      htmlFor="radio--debates"
    >
      U.S. Presidential Debates
      <a
        className="timeline__radio-link-icon"
        href="https://github.com/mytakedotorg/us-presidential-debates"
      >
        <svg
          fill="none"
          height={18}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={18}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </a>
    </label>
     
    <label
      className="timeline__radio-label"
      htmlFor="radio--documents"
    >
      <a
        href="https://github.com/mytakedotorg/mtdo"
      >
        More to come...
      </a>
    </label>
  </div>
</div>
`;

exports[`Documents selected 1`] = `
<div
  className="timeline__inner-container"
>
  <div
    className="timeline__actions"
  >
    <input
      checked={false}
      className="timeline__radio"
      id="radio--debates"
      name="type"
      onChange={[MockFunction]}
      type="radio"
      value="Debates"
    />
    <label
      className="timeline__radio-label"
      htmlFor="radio--debates"
    >
      U.S. Presidential Debates
      <a
        className="timeline__radio-link-icon"
        href="https://github.com/mytakedotorg/us-presidential-debates"
      >
        <svg
          fill="none"
          height={18}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={18}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </a>
    </label>
     
    <label
      className="timeline__radio-label"
      htmlFor="radio--documents"
    >
      <a
        href="https://github.com/mytakedotorg/mtdo"
      >
        More to come...
      </a>
    </label>
  </div>
</div>
`;
